--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,21 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
+default: &dbconnect
+  adapter: postgresql
+  encoding: unicode
   pool: 5
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<: *dbconnect
+  database: violapp_development
+  username: violapp_dev
+  password: QQdvT4cZAMgYEt6g
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  <<: *dbconnect
+  database: violapp_test
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  <<: *dbconnect
+  database: violapp_production
+  username: violapp
+  password: Kkjhftxi5rckmQuy
